Trying to fix the edit but its not working and it seems that I'm stuck

--- a/styles/style.css
+++ b/styles/style.css
@@ -95,7 +95,7 @@ li{
   background: #f1f1f1;
 }
 
-.add-form .btn {
+.add-form .btn{
   background-color: rgb(85, 187, 151);
   color: white;
   padding: 16px 20px;
@@ -104,16 +104,7 @@ li{
   width: 100%;
   margin-bottom:10px;
 }
-.edit-form .btn{
-  background-color: rgb(85, 187, 151);
-  color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  margin-bottom:10px;
 
-}
 .button-container{
   margin-top: 2%;
   padding:2% 4%;
@@ -135,3 +126,25 @@ li{
   padding:2%;
  
 }
+
+#btn-edit{
+  background-color: rgb(85, 187, 151);
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+
+} 
+
+#edit-form-btn-cancel{
+  background-color: rgb(85, 187, 151);
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  margin-bottom:10px;
+
+} 
